petapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petapp-service
  namespace: petapp
spec:
  type: LoadBalancer    # 👈 Kubernetes creates cloud LB automatically
  selector:
    app: petapp
  ports:
    - protocol: TCP
      port: 90           # External port
      targetPort: 8080   # Pod port
